# owl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
debug/: debug_claim_extractor.py  debug_claim_ingester.py  debug_docx_parser.py  debug_llm_generator.py  debug_pdf_parser.py  debug_pipeline.py
debug/processed/1/: diary.md  ledger.md  summary_table.md
debug/processed2/1/: 1_fnol_extraction.json  2_loss_adjuster_report_extraction.json  3_payment_request_extraction.json  final_claim.json  final_claim_raw.txt
src/prompts/: claim_extraction.md  claim_merge.md  claim_summary.md  claim_update.md  qa.md
src/templates/: diary_template.md  ledger_template.md
src/tools/knowledge_base/: claim_fields.py  field_types.py  ingester.py
src/tools/llm/: generator.py
src/tools/parser/: models.py  parser.py
src/utils/: logger.py
tests/generator/: test_lmstudio_generator.py
tests/knowledge_base/: test_claim_fields.py  test_field_types.py  test_ingester.py
tests/parser/: test_pdf_parser.py
