[project]
name = "owl"
version = "0.1.0"
description = "A extraction engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.7.1",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pypdf>=6.9.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.6.0",
    "ty>=0.0.28",
    "pre-commit>=4.0.0",
    "pytest-cov>=7.1.0",
    "pyright>=1.1.408",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), Isort (I), and Peformance (PERF)
select = ["E", "F", "W", "I", "N", "UP", "PERF", "RUF"]
ignore = ["E501", "RUF012", "PERF401", "UP038"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
